Tela de simulado remover efeito neon das divs

--- a/templates/index.html
+++ b/templates/index.html
@@ -176,7 +176,7 @@
         width: 100%;
         display: block;
         margin-top: 20px;
-        box-shadow: 0 0 20px rgba(0, 0, 255, 0.5);
+        box-shadow: 5px 6px 10px rgba(0, 0, 255, 0.5);
         color: white;
         padding: 5px 0;
         border-radius: 10px;
@@ -386,7 +386,7 @@
                 </div>
                 <div class="profiles">
                        <div class="profile interviewee">
-                            <img src="{{ url_for('static', filename='img/img_2.png') }}" alt="Juliana Lima">
+                            <img src="{{ url_for('static', filename='img/img_2.png') }}" alt="Rodolfo Santos">
                             <div class="name">Rodolfo Santos</div>
                        </div>
                        <div class="profile interviewer">
