Tela de simulado liberar botao redirecionando para cracking code quando acabarem as perguntas

--- a/templates/index.html
+++ b/templates/index.html
@@ -417,6 +417,7 @@
                  <ul id="question-list"></ul>
              </div>
           </div>
+          <button type="button" class="btn btn-primary" id="startCrackingCodeButton"  style="margin-left: 20px;" >Go to cracking code</button>
         </div>
        <div>
     </div>
