--- a/templates/algorithm.html
+++ b/templates/algorithm.html
@@ -153,7 +153,7 @@
         width: 100%;
         gap: 260px;
         margin-top: 20px;
-        margin-left: 10px;
+        margin-left: 50px;
     }
     .profile-img {
         width: 100px;
@@ -370,6 +370,55 @@
     button:hover {
         background-color: #0056b3;
     }
+
+    .modal-content {
+      background-color: #1a2b4c; /* Cor de fundo da modal */
+      color: #ffffff; /* Cor do texto */
+      border-radius: 10px; /* Bordas arredondadas */
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para dar destaque */
+    }
+
+    .modal-header {
+      border-bottom: 1px solid #4caf50; /* Borda inferior da cabeça da modal */
+    }
+
+    .modal-title {
+      font-weight: bold;
+      font-size: 1.5rem; /* Tamanho da fonte do título */
+    }
+
+    .modal-body {
+      padding: 20px; /* Padding interno para espaçamento */
+    }
+
+    .modal-footer {
+      border-top: 1px solid #4caf50; /* Borda superior do rodapé da modal */
+    }
+
+    .modal-footer .btn {
+      border-radius: 5px; /* Bordas arredondadas dos botões */
+      transition: background-color 0.3s; /* Transição suave para o hover */
+    }
+
+    .modal-footer .btn-secondary {
+      background-color: #6c757d; /* Cor de fundo do botão secundário */
+      color: white; /* Cor do texto do botão secundário */
+    }
+
+    .modal-footer .btn-secondary:hover {
+      background-color: #5a6268; /* Cor de fundo do botão secundário ao passar o mouse */
+    }
+
+    .modal-footer .btn-primary {
+      background-color: #007bff; /* Cor de fundo do botão primário */
+      color: white; /* Cor do texto do botão primário */
+    }
+
+    .modal-footer .btn-primary:hover {
+      background-color: #0056b3; /* Cor de fundo do botão primário ao passar o mouse */
+    }
+
+
   </style>
 </head>
 <body>
@@ -428,8 +477,8 @@
         </div>
         <div class="coluna3 col-lg-3">
           <div class="linked-lists-box">
-            <div class="row" style="height:50px">
-              <div id="volume-bars">
+            <div class="row" style="height:50px; margin-left:20px">
+              <div id="volume-bars" hidden>
                 <div class="bar"></div>
                 <div class="bar"></div>
                 <div class="bar"></div>
@@ -444,10 +493,10 @@
               </div>
             </div>
             <div class="control-icons">
-              <div id="openMicButton" class="icon-circle" hidden><i class="fas fa-microphone"></i></div>
-              <div id="muteButton" class="icon-circle"><i class="fas fa-microphone-slash"></i></div>
-              <span id="finish" class="icon-circle" hidden><i class="fas fa-phone-slash"></i></span>
-              <span id="play" class="icon-circle"><i class="fas fa-play"></i></span>
+                       <div id="openMicButton" class="icon-circle" hidden><i class="fas fa-microphone"></i></div>
+                       <div id="muteButton" class="icon-circle" hidden><i class="fas fa-microphone-slash"></i></div>
+                       <span id="finish_interview" class="icon-circle" hidden><i class="fas fa-phone-slash"></i></span>
+                       <span id="play" class="icon-circle"><i class="fas fa-play"></i></span>
               <span class="icon-circle" id="cronometro">00:15:00</span>
             </div>
           </div>
@@ -458,6 +507,28 @@
       </div>
     </div>
   </div>
+
+  <div class="modal fade" id="newModal" tabindex="-1" aria-labelledby="newModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="newModalLabel">Stopping interview</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <h5 class="modal-title" id="newModalLabel2">Are you sure you want stop it?</h5>
+            </div>
+            <button type="button" class="btn btn-primary" id="finish">Stop</button>
+            <button type="button" class="btn btn-primary" id="cancelButton">Cancel</button>
+          </form>
+        </div>
+      </div>
+    </div>
+ </div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -469,6 +540,12 @@
   <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.fittext.js') }}" defer></script>
   <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.lettering.js') }}" defer></script>
   <script>
+    $(document).ready(function() {
+      $('#finish_interview').on('click', function() {
+        $('#newModal').modal('show');
+      });
+    });
+
     var editor = ace.edit("editor");
     editor.setTheme("ace/theme/monokai");
     editor.session.setMode("ace/mode/javascript");
