--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -379,7 +379,7 @@
     padding: 20px;
     text-align: center;
     margin-left: 40px;
-    color: #ffcc00;
+    color: white;
     font-family: 'Arial', sans-serif;
     width: 200px;
     height: 150px;
