Tela de simulado atualizar status 1/total

--- a/templates/index.html
+++ b/templates/index.html
@@ -409,8 +409,7 @@
             <div class="linha-separadora"></div>
           <div class="linked-lists-box">
              <div class="header">
-                 <span class="title">INTERVIEW</span>
-                 <span class="level-number">1/12 Questions</span>
+                 <span class="title">QUESTIONS</span>
              </div>
              <div class="content">
                  <p>All available questions interview</p>
