--- a/templates/algorithm.html
+++ b/templates/algorithm.html
@@ -519,6 +519,25 @@
       </div>
     </div>
  </div>
+
+   <div class="modal fade" id="modalStopInt" tabindex="-1" aria-labelledby="newModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="newModalLabel_">Time`s up</h5>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <h5 class="modal-title" id="newModalLabel_2">Let's end this session !</h5>
+                        </div>
+                        <button type="button" class="btn btn-primary" id="finish1">Finish</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -530,12 +549,6 @@
   <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.fittext.js') }}" defer></script>
   <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.lettering.js') }}" defer></script>
   <script>
-    $(document).ready(function() {
-      $('#finish_interview').on('click', function() {
-        $('#newModal').modal('show');
-      });
-    });
-
     var editor = ace.edit("editor");
     editor.setTheme("ace/theme/monokai");
     editor.session.setMode("ace/mode/javascript");
