--- a/templates/algorithm.html
+++ b/templates/algorithm.html
@@ -15,6 +15,25 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.js"></script>
 
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            // Pegando os valores passados pelo Flask
+            var code = `{{ code | tojson | safe }}`;
+            var question = `{{ question | tojson | safe }}`;
+            var id_algorithm = `{{ id_algorithm | tojson | safe }}`;
+
+            // Inicializar o editor Ace
+            var editor = ace.edit("editor");
+            editor.setTheme("ace/theme/monokai");
+            editor.session.setMode("ace/mode/javascript");
+            editor.setFontSize(14);
+            editor.setValue(code, -1);  // O segundo parâmetro move o cursor para o início do texto
+            editor.renderer.setScrollMargin(10, 10);
+            editor.renderer.setPadding(3);
+            document.getElementById('question').innerText = question;
+
+        });
+    </script>
   <!-- Inline Critical CSS -->
   <style>
     body {
@@ -24,9 +43,24 @@
     }
     .linha-separadora {
         height: 120px;
+        overflow-y: auto;
         background: linear-top(to bottom, #000000, #00004B);
         padding-top: 30px;
         color: #ffffff;
+    }
+    .linha-separadora::-webkit-scrollbar {
+        width: 2px;
+        height: 5px;
+    }
+    .linha-separadora::-webkit-scrollbar-track {
+        box-shadow: 0 0 5px rgba(0, 0, 255, 0.5);
+    }
+    .linha-separadora::-webkit-scrollbar-thumb {
+        box-shadow: 0 0 15px rgba(0, 0, 255, 0.5);
+        border-radius: 5px;
+    }
+    .linha-separadora::-webkit-scrollbar-thumb:hover {
+        box-shadow: 0 0 5px rgba(0, 0, 255, 0.5);
     }
     .coluna2 {
         overflow: hidden;
@@ -417,7 +451,11 @@
     .modal-footer .btn-primary:hover {
       background-color: #0056b3; /* Cor de fundo do botão primário ao passar o mouse */
     }
-
+#saveAlgorithm {
+    height: 20px; /* Ajuste a altura conforme necessário */
+    line-height: 20px; /* Centraliza o texto verticalmente */
+    padding: 0 5px; /* Ajuste o padding conforme necessário */
+}
 
   </style>
 </head>
@@ -449,20 +487,10 @@
           </div>
         <div class="coluna2 col-lg-8">
           <div class="linha-separadora">
-            Given an interval newInterval and an array of intervals, create a function that inserts that newInterval in the array, and to merge if necessary. Note that the
-            intervals in the array are non-overlapping, and are sorted according to their starting point.
-            Example 1:
-            Input: intervals = [[1, 3], [4, 7], [8, 10], [12, 15], [16, 17], [18, 20], [21, 25], [28, 29]], newInterval = [9, 18]
-            Output: [[1, 3], [4, 7], [8, 20], [21, 25], [28, 29]]
+            <span id="question"></span>
           </div>
           <div class="filho-coluna2">
-            <div id="editor" style="height: 740px; width: 1220px;">
-              import java.util.*;
-              public class Exercise {
-                public int[][] insertInterval(int[][] intervals, int[] newInterval){
-                }
-              }
-            </div>
+            <div id="editor" style="height: 740px; width: 1220px;"></div>
           </div>
         </div>
         <div class="coluna3 col-lg-3">
@@ -488,11 +516,13 @@
                        <span id="finish_interview" class="icon-circle" hidden><i class="fas fa-phone-slash"></i></span>
                        <span id="play" class="icon-circle"><i class="fas fa-play"></i></span>
               <span class="icon-circle" id="cronometro">00:15:00</span>
+                <button type="submit" class="btn btn-primary" id="saveAlgorithm">Finish</button>
             </div>
           </div>
           <div class="chat-container">
             <div id="chat-box"></div>
           </div>
+
         </div>
       </div>
     </div>
@@ -545,17 +575,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script type="text/javascript" src="{{ url_for('static', filename='js/algorithm.js') }}" defer></script>
+   <script type="text/javascript" src="{{ url_for('static', filename='js/algorithm.js') }}" defer></script>
   <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.fittext.js') }}" defer></script>
   <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.lettering.js') }}" defer></script>
-  <script>
-    var editor = ace.edit("editor");
-    editor.setTheme("ace/theme/monokai");
-    editor.session.setMode("ace/mode/javascript");
-    editor.setFontSize(14);
-    editor.renderer.setScrollMargin(10, 10);
-    editor.renderer.setPadding(3);
-    editor.renderer.setGutterWidth(10);
-  </script>
+
 </body>
 </html>
