--- a/templates/algorithm.html
+++ b/templates/algorithm.html
@@ -22,15 +22,24 @@
             var question = `{{ question | tojson | safe }}`;
             var id_algorithm = `{{ id_algorithm | tojson | safe }}`;
 
+            if (question.startsWith('"') && question.endsWith('"')) {
+                question = question.slice(1, -1);
+            }
+
+            if (code.startsWith('"') && code.endsWith('"')) {
+                code = code.slice(1, -1);
+            }
+
             // Inicializar o editor Ace
             var editor = ace.edit("editor");
             editor.setTheme("ace/theme/monokai");
             editor.session.setMode("ace/mode/javascript");
-            editor.setFontSize(14);
+            editor.setFontSize(15);
             editor.setValue(code, -1);  // O segundo parâmetro move o cursor para o início do texto
             editor.renderer.setScrollMargin(10, 10);
             editor.renderer.setPadding(3);
             document.getElementById('question').innerText = question;
+            document.getElementById('idAlgorithm').innerText = id_algorithm;
 
         });
     </script>
@@ -90,7 +99,7 @@
     .linked-lists-box {
         border-radius: 5px;
         box-shadow: 0 0 5px rgba(0, 255, 0, 0.5);
-        padding: 10px;
+        padding: 5px;
         color: white;
         width: 330px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -186,8 +195,8 @@
         justify-content: left;
         width: 100%;
         gap: 260px;
-        margin-top: 20px;
-        margin-left: 50px;
+        margin-top: 10px;
+        margin-left: 100px;
     }
     .profile-img {
         width: 100px;
@@ -200,8 +209,8 @@
         margin: 0 auto;
     }
     .profile img {
-        width: 230px;
-        height: 230px;
+        width: 200px;
+        height: 200px;
         border-radius: 50%;
         border: none;
         display: block;
@@ -224,7 +233,7 @@
         justify-content: left;
         gap: 20px;
         margin-top: 25px;
-        margin-left: 75px;
+        margin-left: 115px;
         color: white;
     }
     .icon-circle {
@@ -362,7 +371,7 @@
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
     #chat-box {
-        height: 250px;
+        height: 430px;
         overflow-y: scroll;
         margin-bottom: 10px;
     }
@@ -383,7 +392,7 @@
     #chat-box p {
         margin: 5px 0;
         font-family: 'Helvetica Neue', Arial, sans-serif;
-        font-size: 13px;
+        font-size: 15px;
         overflow-wrap: break-word;
     }
     #user-input {
@@ -487,15 +496,16 @@
           </div>
         <div class="coluna2 col-lg-8">
           <div class="linha-separadora">
-            <span id="question"></span>
+            <span  id="question" style="font-family: monospace;"></span>
+            <span id="idAlgorithm" hidden></span>
           </div>
           <div class="filho-coluna2">
-            <div id="editor" style="height: 740px; width: 1220px;"></div>
+            <div id="editor" style="height: 770px; width: 1220px;"></div>
           </div>
         </div>
         <div class="coluna3 col-lg-3">
           <div class="linked-lists-box">
-            <div class="row" style="height:50px; margin-left:20px">
+            <div class="row" style="height:50px; margin-left:60px">
               <div id="volume-bars" hidden>
                 <div class="bar"></div>
                 <div class="bar"></div>
@@ -515,8 +525,8 @@
                        <div id="muteButton" class="icon-circle" hidden><i class="fas fa-microphone-slash"></i></div>
                        <span id="finish_interview" class="icon-circle" hidden><i class="fas fa-phone-slash"></i></span>
                        <span id="play" class="icon-circle"><i class="fas fa-play"></i></span>
-              <span class="icon-circle" id="cronometro">00:15:00</span>
-                <button type="submit" class="btn btn-primary" id="saveAlgorithm">Finish</button>
+                       <span class="icon-circle" id="cronometro">00:15:00</span>
+<!--                       <button type="submit" class="btn btn-primary" id="saveAlgorithm">Finish</button>-->
             </div>
           </div>
           <div class="chat-container">
