--- a/templates/cadastro_pergunta.html
+++ b/templates/cadastro_pergunta.html
@@ -13,8 +13,6 @@
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/FitText.js/1.2.0/jquery.fittext.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.js" type="text/javascript" charset="utf-8"></script>
@@ -24,7 +22,7 @@
   <div class="container-mother">
     <div class="container-fluid h-100">
       <div class="row h-100">
-          <div class="coluna1 col-lg-2">
+          <div class="coluna1 col-lg-1">
             <div class="container">
                 <div class="row">
                     <div class="sidebar-menu">
@@ -40,55 +38,69 @@
                         <div class="menu-item">
                             <i class="fas fa-envelope"></i>
                         </div>
-
-
                     </div>
                 </div>
             </div>
           </div>
-        <div class="coluna2 col-lg-10">
-          <div class="linha-separadora"></div>
-          <div class="filho-coluna2">
-            <div class="row" style="height:100px; width:100%; margin-left:20px;">
-                <span class="dashboard-header"> Available questions  </span>
+        <div class="coluna2 col-lg-11">
+          <div class="linha-separadora">
+            <div class="input-group2" style="height:50px; width:100%; margin-left:10px;">
+                <span class="dashboard-header"> Technical questions  </span>
+                <div class="linha"></div>
             </div>
-
-
-
-   <div class="container_2">
-       <div class="input-group mb-3">
-          <input type="text"   placeholder="Topic" id="search-input" style="width: 260px; height:35px">
-          <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button" id="search-button">Search</button>
+           <div class="input-group mb-3">
+                 <input type="text" placeholder="Topic" id="search-input" style="width: 260px; height:35px">
+                 <div class="input-group-append">
+                     <button class="btn btn-outline-secondary" type="submit" id="search-button">Search</button>
+                 </div>
+           </div>
           </div>
-       </div>
-        <table>
-            <thead>
-                <tr>
-                    <th>Topic</th>
-                    <th>Subtopic</th>
-                    <th>Question</th>
-                    <th>Answer</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody id="table-body">
-                <!-- Conteúdo da tabela será gerado pelo JavaScript -->
-            </tbody>
-        </table>
-    </div>
-              <div id="pagination" class="pagination-container">
+          <div class="filho-coluna2">
+            <div class="container_2">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Topic</th>
+                            <th>Subtopic</th>
+                            <th>Question</th>
+                            <th>Answer</th>
+                        </tr>
+                    </thead>
+                    <tbody id="table-body">
+                        <!-- Conteúdo da tabela será gerado pelo JavaScript -->
+                    </tbody>
+                </table>
+            </div>
+            <div id="pagination" class="pagination-container">
                 <button id="prev-page" class="btn btn-primary">Previous</button>
                 <span id="page-info"></span>
                 <button id="next-page" class="btn btn-primary">Next</button>
-              </div>
-
-
-
+            </div>
           </div>
         </div>
       </div>
     </div>
+
+    <div class="modal fade" id="detailModal" tabindex="-1" aria-labelledby="detailModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="detailModalLabel">Analysis of the questions</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <!-- Conteúdo será preenchido pelo JavaScript -->
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" id="cancelButton">Close</button>
+            </div>
+        </div>
+    </div>
+    </div>
+</div>
+
   </div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -111,18 +123,43 @@
     background: linear-gradient(to bottom, #000000, #00004B);
     color: #ffffff;
 }
+
+.fixed-width {
+     width: 920px; /* Define a largura específica para a coluna */
+     white-space: normal; /* Permite a quebra de linha automática */
+     word-wrap: break-word; /* Garante que palavras longas sejam quebradas */
+}
+.ellipsis {
+     white-space: normal; /* Permite quebra de linha */
+     word-wrap: break-word; /* Quebra palavras longas */
+}
+
 .linha-separadora {
-    height: 80px;
+    height: 260px;
     background: linear-top(to bottom, #000000, #00004B);
     color: #ffffff;
+    position: relative; /* Adicionado para posicionamento absoluto do input */
 }
+.input-group {
+    position: absolute;
+    bottom: -10px; /* Distância do fundo da div */
+    left: 10px; /* Distância da borda esquerda da div */
+}
+.input-group2 {
+    position: absolute;
+    bottom: 130px; /* Distância do fundo da div */
+    left: 10px; /* Distância da borda esquerda da div */
+
+}
+
 .coluna2 {
     overflow: hidden;
     height: 900px;
 }
 .filho-coluna2 {
-    overflow-y: scroll;
-    height: 100%;
+    overflow-y: auto;
+    height: calc(100% - 260px); /* Ajuste a altura para considerar a linha-separadora */
+    margin-left: 12px;
 }
 .filho-coluna2::-webkit-scrollbar {
     width: 2px;
@@ -231,6 +268,13 @@
     font-size: 20px;
     color: gray;
 }
+.linha {
+  border-bottom: 2px solid white; /* Borda inferior da cabeça da modal */
+  width:1220px;
+  margin-bottom : 80px;
+  padding-top: 10px;
+}
+
 .menu-item:hover i {
     color: blue;
     cursor: pointer;
@@ -410,6 +454,7 @@
     background: black;
 }
 .dashboard-header {
+     font-family: monospace;
     font-weight: bold;
     font-size: 28px;
 }
@@ -519,7 +564,6 @@ tr:hover {
     background: #555; /* Cor do indicador de rolagem ao passar o mouse */
 }
 
-
 .action-btn {
     background-color: #007BFF;
     color: white;
@@ -565,8 +609,4 @@ tr:hover {
       margin-left: 5px;
     }
 
-
 </style>
-
-
-</html>
